test_suite/tests/ui/string/validate/duplicated.stderr
error: Duplicated validators `char_len_min`.
       Don't worry, you still remain ingenious!
 --> tests/ui/string/validate/duplicated.rs:3:72
  |
3 | #[nutype(validate(char_len_min = 5, char_len_max = 255, char_len_min = 6))]
  |                                                                        ^
